--- a/usuarios/templates/usuarios/sucesso.html
+++ b/usuarios/templates/usuarios/sucesso.html
@@ -1,34 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Sucesso</title>
 </head>
-
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        margin: 0;
-        padding: 20px;
-        text-align: center;
-    }
-    h1 {
-        color: #4CAF50;
-    }
-    a {
-        display: inline-block;
-        margin-top: 20px;
-        padding: 10px 15px;
-        background-color: #4CAF50;
-        color: white;
-        text-decoration: none;
-        border-radius: 5px;
-    }
-    a:hover {
-        background-color: #45a049;
-    }
-
-</style>
+    <link rel="stylesheet" href="{% static 'style/sucesso.css' %}">
 
 <body>
     <h1>Cadastro realizado com sucesso!</h1>
